[package]
name = "accessor-pair"
version = "0.1.0"
edition = "2021"
description = "A trait for a pair of a getter and a setter, with a macro for easy creation."
documentation = "https://docs.rs/accessor-pair"
readme = "README.md"
homepage = "https://github.com/AidanConnelly/accessor-pair"
license = "MIT"

[dependencies]
